# gumrf-labs

./: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3-1.cpp  lab3-2.cpp  lab3-3.cpp  lab3-4.cpp
