cmake_minimum_required(VERSION 3.26)
project(labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab3-1 lab3-1.cpp)
add_executable(lab3-2 lab3-2.cpp)
add_executable(lab3-3 lab3-3.cpp)
add_executable(test test.cpp)
add_executable(ege ege.cpp)
add_executable(lab3-4 lab3-4.cpp)
add_executable(lab1 lab1.cpp)
add_executable(lab2 lab2.cpp)
